--- a/_source/BaseAdminProject/src/sass/common/index.scss
+++ b/_source/BaseAdminProject/src/sass/common/index.scss
@@ -1,4 +1,6 @@
-$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+﻿$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/solid";
+
+@import "./full-importation";
