--- a/_source/BaseAdminProject/Views/Shared/_LayoutBase.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_LayoutBase.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
     <meta charset="utf-8">
@@ -7,18 +7,10 @@
 
     <title>@ViewData["Title"]</title>
 
-    <!-- Favicon -->
-    @*<link href="/assets/img/brand/favicon.png" rel="icon" type="image/png">*@
+    <partial name="_MetaTags" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-
-    <!-- Icons -->
-    @*<link href="/assets/vendor/nucleo/css/nucleo.min.css" rel="stylesheet">
-        <link href="/assets/vendor/fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">*@
-
-    <!-- Argon CSS -->
-    @*<link type="text/css" href="/assets/css/argon.min.css" rel="stylesheet">*@
 
     <environment names="Development">
         <link href="~/dist/css/common.bundle.css" rel="stylesheet" />
@@ -32,12 +24,6 @@
 
 <body>
     @RenderBody()
-    <!-- Core -->
-    @*<script src="/assets/vendor/jquery/dist/jquery.min.js"></script>
-        <script src="/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
-
-    <!-- Argon JS -->
-    @*<script src="/assets/js/argon.min.js"></script>*@
 
     <environment names="Development">
         <script src="~/dist/js/vendors.bundle.js"></script>
@@ -52,70 +38,3 @@
 </body>
 
 </html>
-
-@*<!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - BaseAdminProject</title>
-
-        <environment names="Development">
-            <link href="~/dist/css/common.bundle.css" rel="stylesheet" />
-        </environment>
-        <environment exclude="Development">
-            <link href="~/dist/css/common.bundle.css" rel="stylesheet" asp-append-version="true" />
-        </environment>
-        @RenderSection("Styles", required: false)
-    </head>
-    <body>
-
-        @RenderBody()
-
-        <environment names="Development">
-            <script src="~/dist/js/vendors.bundle.js"></script>
-            <script src="~/dist/js/common.bundle.js"></script>
-        </environment>
-        <environment exclude="Development">
-            <script src="~/dist/js/vendors.bundle.js" asp-append-version="true"></script>
-            <script src="~/dist/js/common.bundle.js" asp-append-version="true"></script>
-        </environment>
-        @RenderSection("Scripts", required: false)
-    </body>
-    </html>*@
-
-
-
-@*<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">*@
-@*<meta name="author" content="Creative Tim">*@
-@*<title>Argon Dashboard PRO - Premium Bootstrap 4 Admin Template</title>*@
-
-<!-- Extra details for Live View on GitHub Pages -->
-<!-- Canonical SEO -->
-@*    <link rel="canonical" href="https://www.creative-tim.com/product/argon-dashboard-pro" />*@
-<!--  Social tags      -->
-@*<meta name="keywords" content="dashboard, bootstrap 4 dashboard, bootstrap 4 design, bootstrap 4 system, bootstrap 4, bootstrap 4 uit kit, bootstrap 4 kit, argon, argon ui kit, creative tim, html kit, html css template, web template, bootstrap, bootstrap 4, css3 template, frontend, responsive bootstrap template, bootstrap ui kit, responsive ui kit, argon dashboard">
-    <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">*@
-<!-- Schema.org markup for Google+ -->
-@*<meta itemprop="name" content="Argon - Premium Dashboard for Bootstrap 4 by Creative Tim">
-    <meta itemprop="description" content="Start your development with a Dashboard for Bootstrap 4.">
-    <meta itemprop="image" content="https://s3.amazonaws.com/creativetim_bucket/products/137/original/opt_adp_thumbnail.jpg">*@
-<!-- Twitter Card data -->
-@*<meta name="twitter:card" content="product">
-    <meta name="twitter:site" content="creativetim">
-    <meta name="twitter:title" content="Argon - Premium Dashboard for Bootstrap 4 by Creative Tim">
-    <meta name="twitter:description" content="Start your development with a Dashboard for Bootstrap 4.">
-    <meta name="twitter:creator" content="creativetim">
-    <meta name="twitter:image" content="https://s3.amazonaws.com/creativetim_bucket/products/137/original/opt_adp_thumbnail.jpg">*@
-<!-- Open Graph data -->
-@*<meta property="fb:app_id" content="655968634437471">
-    <meta property="og:title" content="Argon - Premium Dashboard for Bootstrap 4 by Creative Tim" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://demos.creative-tim.com/argon-dashboard/index.html" />
-    <meta property="og:image" content="https://s3.amazonaws.com/creativetim_bucket/products/137/original/opt_adp_thumbnail.jpg" />
-    <meta property="og:description" content="Start your development with a Dashboard for Bootstrap 4." />
-    <meta property="og:site_name" content="Creative Tim" />*@
-<!-- Favicon -->
-@*    <link rel="icon" href="../../assets/img/brand/favicon.png" type="image/png">*@
