--- a/_source/BaseAdminProject/src/sass/common/_full-importation.scss
+++ b/_source/BaseAdminProject/src/sass/common/_full-importation.scss
@@ -44,6 +44,7 @@
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/carousel";
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/utilities";
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/print";
+@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/spinners";
 
 // Argon components
 /*@import '@creative-tim-official/argon-dashboard-free/assets/scss/custom/components';*/
