--- a/_source/BaseAdminProject/src/sass/common/index.scss
+++ b/_source/BaseAdminProject/src/sass/common/index.scss
@@ -4,3 +4,19 @@
 @import "~@fortawesome/fontawesome-free/scss/solid";
 
 @import "./full-importation";
+
+.invalid-feedback{
+    display: block;
+}
+
+.eye-password {
+    cursor: pointer;
+    margin-left: auto;
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translate(-50%, -50%);
+    margin-right: auto;
+    color: #5c6873;
+    z-index: 10;
+}
