--- a/_source/BaseAdminProject/Views/Shared/_TopNav.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_TopNav.cshtml
@@ -2,21 +2,7 @@
 <nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Search form -->
-            <form class="navbar-search navbar-search-light form-inline mr-sm-3" id="navbar-search-main">
-                <div class="form-group mb-0">
-                    <div class="input-group input-group-alternative input-group-merge">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fas fa-search"></i></span>
-                        </div>
-                        <input class="form-control" placeholder="Search" type="text">
-                    </div>
-                </div>
-                <button type="button" class="close" data-action="search-close" data-target="#navbar-search-main"
-                        aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </form>
+           
             <!-- Navbar links -->
             <ul class="navbar-nav align-items-center  ml-md-auto ">
                 <li class="nav-item d-xl-none">
@@ -30,15 +16,11 @@
                         </div>
                     </div>
                 </li>
-                <li class="nav-item d-sm-none">
-                    <a class="nav-link" href="#" data-action="search-show" data-target="#navbar-search-main">
-                        <i class="ni ni-zoom-split-in"></i>
-                    </a>
-                </li>
+               
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
                        aria-expanded="false">
-                        <i class="ni ni-bell-55"></i>
+                        <i class="fas fa-user"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-xl  dropdown-menu-right  py-0 overflow-hidden">
                         <!-- Dropdown header -->
@@ -161,43 +143,43 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
                        aria-expanded="false">
-                        <i class="ni ni-ungroup"></i>
+                        <i class="fas fa-user"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-dark bg-default  dropdown-menu-right ">
                         <div class="row shortcuts px-4">
                             <a href="#!" class="col-4 shortcut-item">
                                 <span class="shortcut-media avatar rounded-circle bg-gradient-red">
-                                    <i class="ni ni-calendar-grid-58"></i>
+                                    <i class="fas fa-user"></i>
                                 </span>
                                 <small>Calendar</small>
                             </a>
                             <a href="#!" class="col-4 shortcut-item">
                                 <span class="shortcut-media avatar rounded-circle bg-gradient-orange">
-                                    <i class="ni ni-email-83"></i>
+                                    <i class="fas fa-user"></i>
                                 </span>
                                 <small>Email</small>
                             </a>
                             <a href="#!" class="col-4 shortcut-item">
                                 <span class="shortcut-media avatar rounded-circle bg-gradient-info">
-                                    <i class="ni ni-credit-card"></i>
+                                    <i class="fas fa-user"></i>
                                 </span>
                                 <small>Payments</small>
                             </a>
                             <a href="#!" class="col-4 shortcut-item">
                                 <span class="shortcut-media avatar rounded-circle bg-gradient-green">
-                                    <i class="ni ni-books"></i>
+                                    <i class="fas fa-user"></i>
                                 </span>
                                 <small>Reports</small>
                             </a>
                             <a href="#!" class="col-4 shortcut-item">
                                 <span class="shortcut-media avatar rounded-circle bg-gradient-purple">
-                                    <i class="ni ni-pin-3"></i>
+                                    <i class="fas fa-user"></i>
                                 </span>
                                 <small>Maps</small>
                             </a>
                             <a href="#!" class="col-4 shortcut-item">
                                 <span class="shortcut-media avatar rounded-circle bg-gradient-yellow">
-                                    <i class="ni ni-basket"></i>
+                                    <i class="fas fa-user"></i>
                                 </span>
                                 <small>Shop</small>
                             </a>
@@ -214,7 +196,7 @@
                                 <img alt="Image placeholder" src="https://demos.creative-tim.com/argon-dashboard-pro/assets/img/theme/team-4.jpg">
                             </span>
                             <div class="media-body  ml-2  d-none d-lg-block">
-                                <span class="mb-0 text-sm  font-weight-bold">John Snow</span>
+                                <span class="mb-0 text-sm  font-weight-bold">@User.Identity.Name</span>
                             </div>
                         </div>
                     </a>
@@ -222,26 +204,31 @@
                         <div class="dropdown-header noti-title">
                             <h6 class="text-overflow m-0">Welcome!</h6>
                         </div>
-                        <a href="#!" class="dropdown-item">
-                            <i class="ni ni-single-02"></i>
-                            <span>My profile</span>
+                        <a asp-area="Identity" asp-page="/Account/Manage/Index" class="dropdown-item">
+                            <i class="fas fa-user"></i>
+                            <span>Meu Perfil</span>
                         </a>
-                        <a href="#!" class="dropdown-item">
-                            <i class="ni ni-settings-gear-65"></i>
-                            <span>Settings</span>
+
+                        <a asp-area="Identity" asp-page="/Account/Manage/ChangePassword" class="dropdown-item">
+                            <i class="fas fa-lock"></i>
+                            <span>Trocar Senha</span>
                         </a>
-                        <a href="#!" class="dropdown-item">
-                            <i class="ni ni-calendar-grid-58"></i>
-                            <span>Activity</span>
-                        </a>
-                        <a href="#!" class="dropdown-item">
-                            <i class="ni ni-support-16"></i>
-                            <span>Support</span>
-                        </a>
+                        @*<a href="#!" class="dropdown-item">
+            <i class="fas fa-user"></i>
+            <span>Activity</span>
+        </a>
+        <a href="#!" class="dropdown-item">
+            <i class="fas fa-user"></i>
+            <span>Support</span>
+        </a>*@
                         <div class="dropdown-divider"></div>
-                        <a href="#!" class="dropdown-item">
-                            <i class="ni ni-user-run"></i>
+                        <a asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" class="dropdown-item">
+                            <i class="fas fa-sign-out-alt"></i>
                             <span>Logout</span>
+
+                            @*<form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            </form>*@
                         </a>
                     </div>
                 </li>
