--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -11,11 +11,11 @@
     <div class="col-md-4">
         <form method="post" asp-route-returnUrl="@Model.ReturnUrl">
             <input asp-for="RememberMe" type="hidden" />
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
             <div class="form-group">
                 <label asp-for="Input.TwoFactorCode"></label>
                 <input asp-for="Input.TwoFactorCode" class="form-control" autocomplete="off" />
-                <span asp-validation-for="Input.TwoFactorCode" class="text-danger"></span>
+                <span asp-validation-for="Input.TwoFactorCode" class="invalid-feedback"></span>
             </div>
             <div class="form-group">
                 <div class="checkbox">
@@ -35,7 +35,3 @@
     Don't have access to your authenticator device? You can
     <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">log in with a recovery code</a>.
 </p>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
