--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -13,17 +13,13 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
             <div class="form-group">
                 <label asp-for="Input.RecoveryCode"></label>
                 <input asp-for="Input.RecoveryCode" class="form-control" autocomplete="off" />
-                <span asp-validation-for="Input.RecoveryCode" class="text-danger"></span>
+                <span asp-validation-for="Input.RecoveryCode" class="invalid-feedback"></span>
             </div>
             <button type="submit" class="btn btn-primary">Log in</button>
         </form>
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
