--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -2,35 +2,36 @@
 @model ChangePasswordModel
 @{
     ViewData["Title"] = "Change password";
-    ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h4>@ViewData["Title"]</h4>
-<partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
+<div class="card">
+    <div class="card-header">
+        <div class="row align-items-center">
+            <div class="col-8">
+                <h3 class="mb-0">@ViewData["Title"]</h3>
+            </div>
+        </div>
+    </div>
+    <div class="card-body">
+        <partial name="_StatusMessage" for="StatusMessage" />
         <form id="change-password-form" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
             <div class="form-group">
                 <label asp-for="Input.OldPassword"></label>
                 <input asp-for="Input.OldPassword" class="form-control" />
-                <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+                <span asp-validation-for="Input.OldPassword" class="invalid-feedback"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.NewPassword"></label>
                 <input asp-for="Input.NewPassword" class="form-control" />
-                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+                <span asp-validation-for="Input.NewPassword" class="invalid-feedback"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                <span asp-validation-for="Input.ConfirmPassword" class="invalid-feedback"></span>
             </div>
             <button type="submit" class="btn btn-primary">Update password</button>
         </form>
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
