--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -2,32 +2,36 @@
 @model DeletePersonalDataModel
 @{
     ViewData["Title"] = "Delete Personal Data";
-    ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h4>@ViewData["Title"]</h4>
-
-<div class="alert alert-warning" role="alert">
-    <p>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-    </p>
-</div>
-
-<div>
-    <form id="delete-user" method="post" class="form-group">
-        <div asp-validation-summary="All" class="text-danger"></div>
-        @if (Model.RequirePassword)
-        {
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+<div class="card">
+    <div class="card-header">
+        <div class="row align-items-center">
+            <div class="col-8">
+                <h3 class="mb-0">@ViewData["Title"]</h3>
             </div>
-        }
-        <button class="btn btn-danger" type="submit">Delete data and close my account</button>
-    </form>
-</div>
+        </div>
+    </div>
+    <div class="card-body">
+        <div class="alert alert-warning" role="alert">
+            <p>
+                <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            </p>
+        </div>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+        <div>
+            <form id="delete-user" method="post" class="form-group">
+                <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
+                @if (Model.RequirePassword)
+                {
+                    <div class="form-group">
+                        <label asp-for="Input.Password"></label>
+                        <input asp-for="Input.Password" class="form-control" />
+                        <span asp-validation-for="Input.Password" class="invalid-feedback"></span>
+                    </div>
+                }
+                <button class="btn btn-danger" type="submit">Delete data and close my account</button>
+            </form>
+        </div>
+    </div>
+</div>
