--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
@@ -2,23 +2,33 @@
 @model ResetAuthenticatorModel
 @{
     ViewData["Title"] = "Reset authenticator key";
-    ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
-<partial name="_StatusMessage" for="StatusMessage" />
-<h4>@ViewData["Title"]</h4>
-<div class="alert alert-warning" role="alert">
-    <p>
-        <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>If you reset your authenticator key your authenticator app will not work until you reconfigure it.</strong>
-    </p>
-    <p>
-        This process disables 2FA until you verify your authenticator app.
-        If you do not complete your authenticator app configuration you may lose access to your account.
-    </p>
-</div>
-<div>
-    <form id="reset-authenticator-form" method="post" class="form-group">
-        <button id="reset-authenticator-button" class="btn btn-danger" type="submit">Reset authenticator key</button>
-    </form>
+<div class="card">
+    <div class="card-header">
+        <div class="row align-items-center">
+            <div class="col-8">
+                <h3 class="mb-0">@ViewData["Title"]</h3>
+            </div>
+        </div>
+    </div>
+    <div class="card-body">
+        <partial name="_StatusMessage" for="StatusMessage" />
+
+        <div class="alert alert-warning" role="alert">
+            <p>
+                <span class="glyphicon glyphicon-warning-sign"></span>
+                <strong>If you reset your authenticator key your authenticator app will not work until you reconfigure it.</strong>
+            </p>
+            <p>
+                This process disables 2FA until you verify your authenticator app.
+                If you do not complete your authenticator app configuration you may lose access to your account.
+            </p>
+        </div>
+        <div>
+            <form id="reset-authenticator-form" method="post" class="form-group">
+                <button id="reset-authenticator-button" class="btn btn-danger" type="submit">Reset authenticator key</button>
+            </form>
+        </div>
+    </div>
 </div>
