--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -2,34 +2,41 @@
 @model SetPasswordModel
 @{
     ViewData["Title"] = "Set password";
-    ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h4>Set your password</h4>
-<partial name="_StatusMessage" for="StatusMessage" />
-<p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
-</p>
-<div class="row">
-    <div class="col-md-6">
-        <form id="set-password-form" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.NewPassword"></label>
-                <input asp-for="Input.NewPassword" class="form-control" />
-                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+
+<div class="card">
+    <div class="card-header">
+        <div class="row align-items-center">
+            <div class="col-8">
+                <h3 class="mb-0">@ViewData["Title"]</h3>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="card-body">
+        <h4>Set your password</h4>
+        <partial name="_StatusMessage" for="StatusMessage" />
+        <p class="text-info">
+            You do not have a local username/password for this site. Add a local
+            account so you can log in without an external login.
+        </p>
+        <div class="row">
+            <div class="col-md-6">
+                <form id="set-password-form" method="post">
+                    <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
+                    <div class="form-group">
+                        <label asp-for="Input.NewPassword"></label>
+                        <input asp-for="Input.NewPassword" class="form-control" />
+                        <span asp-validation-for="Input.NewPassword" class="invalid-feedback"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.ConfirmPassword"></label>
+                        <input asp-for="Input.ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="Input.ConfirmPassword" class="invalid-feedback"></span>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Set password</button>
+                </form>
             </div>
-            <button type="submit" class="btn btn-primary">Set password</button>
-        </form>
+        </div>
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
