--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,15 +1,21 @@
-﻿@inject SignInManager<BaseAdminUser> SignInManager
+﻿@using BaseAdminProject.Business.Core
+@inject SignInManager<BaseAdminUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
-<ul class="nav nav-pills flex-column">
-    <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
+
+<div class="list-group">
+    <a asp-page="./Index" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./Index"))">
+        Profile
+    </a>
+    <a asp-page="./Email" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./Email"))">Email</a>
+    <a asp-page="./ChangePassword" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./ChangePassword"))" >Password</a>
+
     @if (hasExternalLogins)
     {
-        <li id="external-logins" class="nav-item"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
+        <a asp-page="./ExternalLogins" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./ExternalLogins"))">External logins</a>
     }
-    <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
-</ul>
+
+    <a asp-page="./TwoFactorAuthentication" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./TwoFactorAuthentication"))">Two-factor authentication</a>
+    <a asp-page="./PersonalData" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./PersonalData"))">Personal data</a>
+</div>
