#477 added index of user to get all users from database with datatables ajax

--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Entrar";
 }
 
-@section styles {
+@section Styles {
     <environment names="Development">
         <link href="~/dist/css/login.bundle.css" rel="stylesheet" />
     </environment>
@@ -104,7 +104,7 @@
     </div>
 </div>
 
-@section scripts {
+@section Scripts {
     <environment names="Development">
         <script src="~/dist/js/login.bundle.js"></script>
     </environment>
