--- a/_source/BaseAdminProject/src/sass/common/_full-importation.scss
+++ b/_source/BaseAdminProject/src/sass/common/_full-importation.scss
@@ -172,6 +172,7 @@
 
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/custom/utilities';
 
+@import '~@creative-tim-official/argon-dashboard-free/assets/vendor/animate.css/animate.min.css';
 
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/bootstrap-datepicker';
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/bootstrap-tagsinput';
