--- a/_source/BaseAdminProject/Views/Shared/_Sidenav.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_Sidenav.cshtml
@@ -39,7 +39,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link @Html.GetActiveClass(Context.Request, Url.Action("Index", "User"))" asp-controller="User" asp-action="Index">
-                            <i class="fas fa-table text-primary"></i>
+                            <i class="fas fa-users text-primary"></i>
                             <span class="nav-link-text">Usuários</span>
                         </a>
                     </li>
