--- a/_source/BaseAdminProject/Views/User/Index.cshtml
+++ b/_source/BaseAdminProject/Views/User/Index.cshtml
@@ -22,12 +22,12 @@
                             <li class="breadcrumb-item">
                                 <a asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i></a>
                             </li>
-                            <li class="breadcrumb-item active" aria-current="page">@ViewData["Title"]</li>
+                            <li class="breadcrumb-item active" aria-current="page"><i class="fas fa-users"></i> @ViewData["Title"]</li>
                         </ol>
                     </nav>
                 </div>
                 <div class="col-lg-6 col-5 text-right">
-                    <a asp-controller="User" asp-action="AddUser" class="btn btn-sm btn-neutral">New</a>
+                    <a asp-controller="User" asp-action="AddUser" class="btn btn-sm btn-neutral">Adicionar</a>
                 </div>
             </div>
         </div>
