#477 add user implemented

--- a/_source/BaseAdminProject/Views/Shared/_MetaTags.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_MetaTags.cshtml
@@ -31,4 +31,4 @@
     <meta property="og:site_name" content="Creative Tim" />*@
 
 <!-- Favicon -->
-<link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/img/brand/favicon.png" rel="icon" type="image/png">
+@*<link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/img/brand/favicon.png" rel="icon" type="image/png">*@
