--- a/_source/BaseAdminProject/Views/User/Index.cshtml
+++ b/_source/BaseAdminProject/Views/User/Index.cshtml
@@ -36,6 +36,9 @@
 
 <!-- Page content -->
 <div class="container-fluid mt--6">
+
+    <partial name="_StatusMessage" />
+
     <!-- Table -->
     <div class="row">
         <div class="col">
