--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -22,8 +22,7 @@
             <div class="header-body text-center mb-7">
                 <div class="row justify-content-center">
                     <div class="col-xl-5 col-lg-6 col-md-8 px-5">
-                        <h1 class="text-white">Welcome!</h1>
-                        <p class="text-lead text-white">Use these awesome forms to login or create new account in your project for free.</p>
+                        <h1 class="text-white">Bem vindo ao Base Admin Project!</h1>
                     </div>
                 </div>
             </div>
@@ -42,10 +41,10 @@
                 <div class="card bg-secondary border-0 mb-0">
                     <div class="card-body px-lg-5 py-lg-5">
                         <div class="text-center text-muted mb-4">
-                            <small>Login</small>
+                            <small>@ViewData["title"]</small>
                         </div>
                         <form id="loginForm" method="post" novalidate>
-                            <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
+                            <div asp-validation-summary="All"></div>
 
                             <div class="form-group mb-3">
                                 <label asp-for="Input.Email" class="form-control-label"></label>
@@ -55,41 +54,45 @@
                                             <i class="fas fa-user"></i>
                                         </span>
                                     </div>
+
                                     <input asp-for="Input.Email" type="email" class="form-control" placeholder="Email">
                                 </div>
 
-                                <span asp-validation-for="Input.Email" class="invalid-feedback ml-5"></span>
+                                <span asp-validation-for="Input.Email" class="invalid-feedback"></span>
                             </div>
 
                             <div class="form-group mb-3">
                                 <label asp-for="Input.Password" class="form-control-label"></label>
-                                
+
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
                                             <i class="fas fa-lock"></i>
                                         </span>
                                     </div>
+
                                     <input asp-for="Input.Password" class="form-control" placeholder="Senha">
+
                                     <div class="input-group-append eye-password eyePassword">
-                                        <span class="input-group-text"><i class="fas fa-eye-slash"></i></span>
+                                        <span class="input-group-text">
+                                            <i class="fas fa-eye-slash"></i>
+                                        </span>
                                     </div>
                                 </div>
 
-                                <span asp-validation-for="Input.Password" class="invalid-feedback ml-5"></span>
+                                <span asp-validation-for="Input.Password" class="invalid-feedback"></span>
                             </div>
 
                             <div class="custom-control custom-control-alternative custom-checkbox mb-3">
-                                <input asp-for="Input.RememberMe" type="checkbox" class="custom-control-input" id="customControlValidation1">
-                                <label asp-for="Input.RememberMe" class="custom-control-label" for="customControlValidation1">Lembrar-me</label>
-                                <span class="invalid-feedback"></span>
+                                <input asp-for="Input.RememberMe" class="custom-control-input">
+                                <label asp-for="Input.RememberMe" class="custom-control-label"></label>
                             </div>
 
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary my-4" data-style="expand-right">
+                                <button type="submit" class="btn btn-primary my-4">
                                     Entrar
                                     <span class="d-none spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                                    <span class="sr-only">Loading...</span>
+                                    <span class="sr-only">Carregando...</span>
                                 </button>
                             </div>
                         </form>
