--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -14,7 +14,7 @@
         </div>  
     </div>
     <div class="card-body">
-        <partial name="_StatusMessage" for="StatusMessage" />
+        <partial name="_StatusMessageAccount" for="StatusMessage" />
         <p>To use an authenticator app go through the following steps:</p>
         <ol class="list">
             <li>
