--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="card-body">
-        <partial name="_StatusMessage" for="StatusMessage" />
+        <partial name="_StatusMessageAccount" for="StatusMessage" />
         @if (Model.CurrentLogins?.Count > 0)
         {
             <h4>Registered Logins</h4>
