--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="card-body">
-        <partial name="_StatusMessage" for="StatusMessage" />
+        <partial name="_StatusMessageAccount" for="StatusMessage" />
 
         <div class="alert alert-warning" role="alert">
             <p>
