--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -15,7 +15,7 @@
     </div>
     <div class="card-body">
         <h4>Set your password</h4>
-        <partial name="_StatusMessage" for="StatusMessage" />
+        <partial name="_StatusMessageAccount" for="StatusMessage" />
         <p class="text-info">
             You do not have a local username/password for this site. Add a local
             account so you can log in without an external login.
