--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="card-body">
-        <partial name="_StatusMessage" for="StatusMessage" />
+        <partial name="_StatusMessageAccount" for="StatusMessage" />
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
             <div class="form-group">
