--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -14,7 +14,7 @@
     </div>
     <div class="card-body">
 
-        <partial name="_StatusMessage" for="StatusMessage" />
+        <partial name="_StatusMessageAccount" for="StatusMessage" />
         @if (Model.Is2faEnabled)
         {
             if (Model.RecoveryCodesLeft == 0)
