--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -1,22 +1,87 @@
 ﻿@page
 @model ResendEmailConfirmationModel
 @{
-    ViewData["Title"] = "Resend email confirmation";
+    ViewData["Title"] = "Reenviar email de confirmação";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="invalid-feedback"></span>
+@section Styles {
+    <environment names="Development">
+        <link href="~/dist/css/resend-email.bundle.css" rel="stylesheet" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/resend-email.bundle.css" asp-append-version="true" rel="stylesheet" />
+    </environment>
+}
+
+<!-- Main content -->
+<div class="main-content bg-default h-100vh">
+    <!-- Header -->
+    <div class="header bg-gradient-primary py-7">
+        <div class="container">
+            <div class="header-body text-center mb-7">
+                <div class="row justify-content-center">
+                    <div class="col-lg-5 col-md-7">
+                        <h1 class="text-white">@ViewData["title"]</h1>
+                    </div>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary">Resend</button>
-        </form>
+        </div>
+        <div class="separator separator-bottom separator-skew zindex-100">
+            <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
+            </svg>
+        </div>
+    </div>
+
+    <!-- Page content -->
+    <div class="container mt--8 pb-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-5 col-md-7">
+                <div class="card bg-secondary border-0 mb-0">
+                    <div class="card-body px-lg-5 py-lg-5">
+                        <form id="resendEmailForm" method="post">
+                            <div asp-validation-summary="ModelOnly"></div>
+
+                            <div class="form-group">
+                                <label asp-for="Input.Email"></label>
+                                <div class="input-group input-group-merge">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text">
+                                            <i class="fas fa-user"></i>
+                                        </span>
+                                    </div>
+
+                                    <input asp-for="Input.Email" class="form-control" placeholder="Email">
+                                </div>
+                                <span asp-validation-for="Input.Email" class="invalid-feedback"></span>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary float-right">
+                                Re-enviar
+                                <span class="d-none spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                                <span class="sr-only">Carregando...</span>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6">
+                        <a asp-page="./ForgotPassword" class="text-light"><small>Esqueceu a senha?</small></a>
+                    </div>
+                    <div class="col-6 text-right">
+                        <a asp-page="./Login" class="text-light"><small>Entrar</small></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+@section Scripts {
+    <environment names="Development">
+        <script src="~/dist/js/resend-email.bundle.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/dist/js/resend-email.bundle.js" asp-append-version="true"></script>
+    </environment>
+}
