--- a/_source/BaseAdminProject/Views/Shared/_StatusMessage.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_StatusMessage.cshtml
@@ -8,11 +8,10 @@
 {
     <div class="row">
         <div class="col-12">
-            <div class="alert alert-@messageType alert-dismissible" role="alert">
+            <div class="alert alert-@messageType alert-dismissible text-center" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 @message
             </div>
         </div>
     </div>
-
 }
