#477 adjusted change password, created common js to import when necessary and smal changes

--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -70,7 +70,7 @@
                                         </span>
                                     </div>
 
-                                    <input asp-for="Input.Password" class="form-control" placeholder="Senha">
+                                    <input asp-for="Input.Password" class="form-control" placeholder="*******">
 
                                     <div class="input-group-append eye-password eyePassword">
                                         <span class="input-group-text">
