--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -44,7 +44,7 @@
                             <input asp-for="Input.Code" />
 
                             <div class="form-group">
-                                <label asp-for="Input.Email"></label>
+                                <label asp-for="Input.Email" class="form-control-label"></label>
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
