--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -19,7 +19,7 @@
         <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
+                <label asp-for="Input.Email" class="form-control-label"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="invalid-feedback"></span>
             </div>
