--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -43,7 +43,7 @@
                             <div asp-validation-summary="ModelOnly"></div>
 
                             <div class="form-group">
-                                <label asp-for="Input.Email"></label>
+                                <label asp-for="Input.Email" class="form-control-label"></label>
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
