--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -15,7 +15,7 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
             <div class="form-group">
-                <label asp-for="Input.RecoveryCode"></label>
+                <label asp-for="Input.RecoveryCode" class="form-control-label"></label>
                 <input asp-for="Input.RecoveryCode" class="form-control" autocomplete="off" />
                 <span asp-validation-for="Input.RecoveryCode" class="invalid-feedback"></span>
             </div>
