--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -4,6 +4,15 @@
     ViewData["Title"] = "Change password";
 }
 
+@section Styles {
+    <environment names="Development">
+        <link href="~/dist/css/change-password.bundle.css" rel="stylesheet" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/change-password.bundle.css" asp-append-version="true" rel="stylesheet" />
+    </environment>
+}
+
 <div class="card">
     <div class="card-header">
         <div class="row align-items-center">
@@ -13,25 +22,91 @@
         </div>
     </div>
     <div class="card-body">
-        <partial name="_StatusMessageAccount" for="StatusMessage" />
-        <form id="change-password-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
-            <div class="form-group">
-                <label asp-for="Input.OldPassword"></label>
-                <input asp-for="Input.OldPassword" class="form-control" />
+        <partial name="_StatusMessage" />
+
+        <form id="changePasswordForm" method="post">
+            <div asp-validation-summary="ModelOnly"></div>
+
+            <div class="form-group mb-3">
+                <label asp-for="Input.OldPassword" class="form-control-label"></label>
+
+                <div class="input-group input-group-merge">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </div>
+
+                    <input asp-for="Input.OldPassword" class="form-control" placeholder="*******">
+
+                    <div class="input-group-append eye-password eyePassword">
+                        <span class="input-group-text">
+                            <i class="fas fa-eye-slash"></i>
+                        </span>
+                    </div>
+                </div>
+
                 <span asp-validation-for="Input.OldPassword" class="invalid-feedback"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.NewPassword"></label>
-                <input asp-for="Input.NewPassword" class="form-control" />
+
+            <div class="form-group mb-3">
+                <label asp-for="Input.NewPassword" class="form-control-label"></label>
+
+                <div class="input-group input-group-merge">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </div>
+
+                    <input asp-for="Input.NewPassword" class="form-control" placeholder="*******">
+
+                    <div class="input-group-append eye-password eyePassword">
+                        <span class="input-group-text">
+                            <i class="fas fa-eye-slash"></i>
+                        </span>
+                    </div>
+                </div>
+
                 <span asp-validation-for="Input.NewPassword" class="invalid-feedback"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
+
+            <div class="form-group mb-3">
+                <label asp-for="Input.ConfirmPassword" class="form-control-label"></label>
+
+                <div class="input-group input-group-merge">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </div>
+
+                    <input asp-for="Input.ConfirmPassword" class="form-control" placeholder="*******">
+
+                    <div class="input-group-append eye-password eyePassword">
+                        <span class="input-group-text">
+                            <i class="fas fa-eye-slash"></i>
+                        </span>
+                    </div>
+                </div>
+
                 <span asp-validation-for="Input.ConfirmPassword" class="invalid-feedback"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Update password</button>
+
+            <button type="submit" class="btn btn-primary float-right">
+                Atualizar Senha
+                <span class="d-none spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                <span class="sr-only">Carregando...</span>
+            </button>
         </form>
     </div>
 </div>
+
+@section Scripts {
+    <environment names="Development">
+        <script src="~/dist/js/change-password.bundle.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/dist/js/change-password.bundle.js" asp-append-version="true"></script>
+    </environment>
+}
