--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -25,7 +25,7 @@
                 @if (Model.RequirePassword)
                 {
                     <div class="form-group">
-                        <label asp-for="Input.Password"></label>
+                        <label asp-for="Input.Password" class="form-control-label"></label>
                         <input asp-for="Input.Password" class="form-control" />
                         <span asp-validation-for="Input.Password" class="invalid-feedback"></span>
                     </div>
