--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -17,7 +17,7 @@
         <form id="email-form" method="post">
             <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
             <div class="form-group">
-                <label asp-for="Email"></label>
+                <label asp-for="Email" class="form-control-label"></label>
                 @if (Model.IsEmailConfirmed)
                 {
                     <div class="input-group">
@@ -34,7 +34,7 @@
                 }
             </div>
             <div class="form-group">
-                <label asp-for="Input.NewEmail"></label>
+                <label asp-for="Input.NewEmail" class="form-control-label"></label>
                 <input asp-for="Input.NewEmail" class="form-control" />
                 <span asp-validation-for="Input.NewEmail" class="invalid-feedback"></span>
             </div>
