--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -43,7 +43,7 @@
                     <div class="col-md-6">
                         <form id="send-code" method="post">
                             <div class="form-group">
-                                <label asp-for="Input.Code" class="control-label">Verification Code</label>
+                                <label asp-for="Input.Code" class="form-control-label">Verification Code</label>
                                 <input asp-for="Input.Code" class="form-control" autocomplete="off" />
                                 <span asp-validation-for="Input.Code" class="invalid-feedback"></span>
                             </div>
