--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,7 +1,17 @@
 ﻿@page
+@using BaseAdminProject.Business.Core
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = "Perfil";
+}
+
+@section Styles {
+    <environment names="Development">
+        <link href="~/dist/css/profile.bundle.css" rel="stylesheet" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/profile.bundle.css" asp-append-version="true" rel="stylesheet" />
+    </environment>
 }
 
 <div class="row">
@@ -60,112 +70,36 @@
         </div>
     </div>
     <div class="card-body">
-        <partial name="_StatusMessageAccount" model="Model.StatusMessage" />
-        <form id="profile-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
+        <partial name="_StatusMessage" />
+
+        <form id="profileForm" method="post">
+            <div asp-validation-summary="ModelOnly"></div>
+
             <div class="form-group">
-                <label asp-for="Username"></label>
+                <label asp-for="Username" class="form-control-label"></label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
+
             <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <label asp-for="Input.PhoneNumber" class="form-control-label"></label>
+                <input asp-for="Input.PhoneNumber" class="form-control" data-mask="@Globals.MaskPhone" />
                 <span asp-validation-for="Input.PhoneNumber" class="invalid-feedback"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+
+            <button type="submit" class="btn btn-primary float-right">
+                Salvar
+                <span class="d-none spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                <span class="sr-only">Carregando...</span>
+            </button>
         </form>
     </div>
 </div>
 
-
-@*<div class="card">
-    <div class="card-header">
-        <div class="row align-items-center">
-            <div class="col-8">
-                <h3 class="mb-0">Edit profile </h3>
-            </div>
-            <div class="col-4 text-right">
-                <a href="#!" class="btn btn-sm btn-primary">Settings</a>
-            </div>
-        </div>
-    </div>
-    <div class="card-body">
-        <form>
-            <h6 class="heading-small text-muted mb-4">User information</h6>
-            <div class="pl-lg-4">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-username">Username</label>
-                            <input type="text" id="input-username" class="form-control" placeholder="Username" value="lucky.jesse">
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-email">Email address</label>
-                            <input type="email" id="input-email" class="form-control" placeholder="jesse@example.com">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-first-name">First name</label>
-                            <input type="text" id="input-first-name" class="form-control" placeholder="First name" value="Lucky">
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-last-name">Last name</label>
-                            <input type="text" id="input-last-name" class="form-control" placeholder="Last name" value="Jesse">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr class="my-4" />
-            
-            <h6 class="heading-small text-muted mb-4">Contact information</h6>
-            <div class="pl-lg-4">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-address">Address</label>
-                            <input id="input-address" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-city">City</label>
-                            <input type="text" id="input-city" class="form-control" placeholder="City" value="New York">
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-country">Country</label>
-                            <input type="text" id="input-country" class="form-control" placeholder="Country" value="United States">
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label class="form-control-label" for="input-country">Postal code</label>
-                            <input type="number" id="input-postal-code" class="form-control" placeholder="Postal code">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr class="my-4" />
-            
-            <h6 class="heading-small text-muted mb-4">About me</h6>
-            <div class="pl-lg-4">
-                <div class="form-group">
-                    <label class="form-control-label">About Me</label>
-                    <textarea rows="4" class="form-control" placeholder="A few words about you ...">A beautiful premium dashboard for Bootstrap 4.</textarea>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>*@
-
-
+@section Scripts {
+    <environment names="Development">
+        <script src="~/dist/js/profile.bundle.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/dist/js/profile.bundle.js" asp-append-version="true"></script>
+    </environment>
+}
