--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -25,12 +25,12 @@
                 <form id="set-password-form" method="post">
                     <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
                     <div class="form-group">
-                        <label asp-for="Input.NewPassword"></label>
+                        <label asp-for="Input.NewPassword" class="form-control-label"></label>
                         <input asp-for="Input.NewPassword" class="form-control" />
                         <span asp-validation-for="Input.NewPassword" class="invalid-feedback"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Input.ConfirmPassword"></label>
+                        <label asp-for="Input.ConfirmPassword" class="form-control-label"></label>
                         <input asp-for="Input.ConfirmPassword" class="form-control" />
                         <span asp-validation-for="Input.ConfirmPassword" class="invalid-feedback"></span>
                     </div>
