--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,21 +1,14 @@
 ﻿@using BaseAdminProject.Business.Core
-@inject SignInManager<BaseAdminUser> SignInManager
-@{
-    var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
-}
 
 <div class="list-group">
     <a asp-page="./Index" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./Index"))">
         Profile
     </a>
     <a asp-page="./Email" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./Email"))">Email</a>
-    <a asp-page="./ChangePassword" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./ChangePassword"))" >Password</a>
+    <a asp-page="./ChangePassword" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./ChangePassword"))">Senha</a>
 
-    @if (hasExternalLogins)
-    {
-        <a asp-page="./ExternalLogins" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./ExternalLogins"))">External logins</a>
-    }
+    <a asp-page="./ExternalLogins" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./ExternalLogins"))">Login Externo (remove)</a>
 
-    <a asp-page="./TwoFactorAuthentication" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./TwoFactorAuthentication"))">Two-factor authentication</a>
-    <a asp-page="./PersonalData" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./PersonalData"))">Personal data</a>
+    <a asp-page="./TwoFactorAuthentication" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./TwoFactorAuthentication"))">Autenticação em duas etapas</a>
+    <a asp-page="./PersonalData" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./PersonalData"))">Dados Pessoais</a>
 </div>
