--- a/_source/BaseAdminProject/Views/Shared/_LayoutBase.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_LayoutBase.cshtml
@@ -27,10 +27,12 @@
 
     <environment names="Development">
         <script src="~/dist/js/vendors.bundle.js"></script>
+        <script src="~/dist/js/commonChunks.bundle.js"></script>
         <script src="~/dist/js/common.bundle.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/vendors.bundle.js" asp-append-version="true"></script>
+        <script src="~/dist/js/commonChunks.bundle.js" asp-append-version="true"></script>
         <script src="~/dist/js/common.bundle.js" asp-append-version="true"></script>
     </environment>
 
